# Einstein

./: .dockerignore  .gitignore  README.md  mkdocs.yml  pyproject.toml
compose/_template/: .env.example  compose.yaml
compose/einstein-core/: .env.example  Dockerfile  README.md  compose.yaml
compose/smoke-test/: .env.example  README.md  compose.yaml
compose/smoke-test/www/: index.html
docs/: docker-architecture.md  docker-operations.md  index.md  infrastructure.md  network-openvpn.md  roadmap.md
docs/adr/: 0001-architecture.md  0002-separation-code-donnees.md  0003-gestion-docker-compose.md  0004-gestion-ressources-cpu-dsm.md  0005-monolithe-modulaire-fastapi.md
docs/sprints/: sprint-2-socle-docker.md  sprint-3-socle-applicatif.md
scripts/: backup-stack.sh  docker-doctor.sh  stack-down.sh  stack-logs.sh  stack-status.sh  stack-up.sh
scripts/lib/: stack-common.sh
src/einstein_core/: __init__.py  config.py  logging_config.py  main.py
src/einstein_core/api/: __init__.py  health.py
tests/: test_config.py  test_health.py
