[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "einstein-core"
version = "0.1.0"
description = "Socle applicatif de la plateforme personnelle Einstein"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi==0.139.2",
    "pydantic-settings==2.14.2",
    "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx2==2.7.0",
    "pytest==9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
